# ninety-nine

./: .gitignore  README.md  ninety-nine.cabal
src/: Arithmetic.hs  BTrees1.hs  BTrees2.hs  Graphs.hs  Lists1.hs  Lists2.hs  Lists3.hs  Logic.hs  MTrees.hs  Miscellaneous1.hs  Miscellaneous2.hs
src/Problems/: Lists1.hs  Lists3.hs
test/: ArithmeticSpec.hs  BTrees1Spec.hs  BTrees2Spec.hs  GraphsSpec.hs  List1Spec.hs  List2Spec.hs  List3Spec.hs  LogicSpec.hs  MTreesSpec.hs  Miscellaneous2Spec.hs  Tests.hs
