name:                ninety-nine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ninety-nine#readme
license:             BSD3
license-file:        LICENSE
author:              Gustavo Franke
maintainer:          example@example.com
copyright:           2020 Gustavo Franke
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ninety-nine
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  ghc-options:         -Wall
  exposed-modules:     Lists1
                     , Lists2
                     , Lists3
                     , Arithmetic
  build-depends:       base >= 4.7 && <5
                     , random
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base
                     , hspec
                     , ninety-nine
  default-language:    Haskell2010
  other-modules:       List1Spec
                     , List2Spec
                     , List3Spec
                     , ArithmeticSpec
  build-tool-depends: hspec-discover:hspec-discover == 2.*
